--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,6 +1,9 @@
 .hero {
-   display: flex;
-   flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
  
     &__wrapper {
         display: flex;
