--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,16 +1,20 @@
 @use '../../scss/variable.scss' as *;
 
 .nav {
+    margin-top: 30px;
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
+    align-items: center;
+
+    &__github {
+        width: 30px;
+    }
 
     &__list {
         display: flex;
         gap: 40px;
-        margin-top: 20px;
         list-style-type: none;
         &-item {
-
 
             & > .link {
                 padding: 5px;
@@ -18,7 +22,6 @@
                 font-weight: 500;
                 text-decoration: none;
                 color: black;
-                
             }
         }
     }
