--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
