--- a/src/index.scss
+++ b/src/index.scss
@@ -10,4 +10,9 @@ body {
     font-family: "Noto Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    color: $color-main-text;
 }
+
+
+
+
