--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -7,7 +7,10 @@
     align-items: center;
 
     &__github {
-        width: 30px;
+        width: 20px;
+        &:hover {
+            background: radial-gradient(circle, rgba(0,255,128,0.6) 0%, rgba(0,255,128,0) 70%);
+        }  
     }
 
     &__list {
@@ -22,6 +25,7 @@
                 font-weight: 500;
                 text-decoration: none;
                 color: black;
+                border-radius: 3px;
             }
         }
     }
